fixed mobile nav hamburger button visibility

--- a/css/queries.css
+++ b/css/queries.css
@@ -129,7 +129,7 @@
   }
 
   /* MOBILE NAVIGATION */
-  .button-mobile-nav {
+  .bt n-mobile-nav {
     display: block;
     z-index: 9999;
   }
